--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <h2 class="titulo">Gricelle Bouvier</h2>
       </a>
 
